EXQUIS 25 (test): 73,60% test coverage